objects/Training__c.object
<CustomObject>
    <fields>
        <fullName>Travel_Expenses_Approved_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Travel Expenses Approved By</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Trainings (Travel Expenses Approved By)</relationshipLabel>
        <relationshipName>Trainings2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Travel_Purchased__c</fullName>
        <label>Travel Purchased</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Trusted_Sites_Set__c</fullName>
        <inlineHelpText>Has the dealer enabled all needed sites within their security settings? If not necessary, set to N/A.</inlineHelpText>
        <label>Trusted Sites Set</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type_of_Internet_Access__c</fullName>
        <label>Type of Internet Access</label>
        <picklist>
            <picklistValues>
                <fullName>Wi-Fi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dial-Up</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DSL/Cable</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>T-1</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>User_List_Finalized__c</fullName>
        <defaultValue>false</defaultValue>
        <label>User List Finalized</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Vehicle_Size_Needed__c</fullName>
        <label>Vehicle Size Needed</label>
        <picklist>
            <picklistValues>
                <fullName>Compact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Economy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intermediate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Full Size</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Will Provide</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>VinPaid__c</fullName>
        <inlineHelpText>Is this training&apos;s costs being covered by Vin?</inlineHelpText>
        <label>VinPaid</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Vin_Account_Status__c</fullName>
        <formula>TEXT(Account__r.Status__c)</formula>
        <label>Vin Account Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warning__c</fullName>
        <formula>IF(
   Blocks_Generated__c = TRUE,
   &quot;&quot;,
   IMAGE(&quot;/servlet/servlet.FileDownload?file=015700000020F5d&quot;, &quot;blocks not generated&quot;)
)</formula>
        <label>Warning</label>
        <type>Text</type>
    </fields>
    <label>Training</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_N_DAYS:30</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Created_Today</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Created Today</label>
    </listViews>
    <listViews>
        <fullName>Desking_New_No_Dates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <columns>Account_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>No Dates</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Training__c.Desking_3_0_UTS</value>
        </filters>
        <label>Desking: New - No Dates</label>
    </listViews>
    <listViews>
        <fullName>Desking_Scheduled_Confirmed_Dates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Trainer__c</columns>
        <columns>Confirmed_Training_Start__c</columns>
        <columns>Confirmed_Training_End__c</columns>
        <columns>Account_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Confirmed Dates</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Training__c.Desking_3_0_UTS</value>
        </filters>
        <label>Desking: Scheduled - Confirmed Dates</label>
    </listViews>
    <listViews>
        <fullName>Desking_Scheduling_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Confirmed_Training_Start__c</columns>
        <columns>Confirmed_Training_End__c</columns>
        <columns>Account_State__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Proposed Dates</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Training__c.Desking_3_0_UTS</value>
        </filters>
        <label>Desking: Scheduling In Progress</label>
    </listViews>
    <listViews>
        <fullName>New_No_Dates</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>No Dates</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Training__c.Desking_3_0_UTS</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>test dealer,vinsolutions</value>
        </filters>
        <label>New - No Dates</label>
    </listViews>
    <listViews>
        <fullName>Recently_Canceled</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>Canceled_Date__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Recent_Cancellation__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Recently Canceled</label>
    </listViews>
    <listViews>
        <fullName>Scheduled_Awaiting_Completion</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Assigned_Trainer__c</columns>
        <columns>Confirmed_Training_Start__c</columns>
        <columns>Confirmed_Training_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Travel Purchased</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Training__c.Desking_3_0_UTS</value>
        </filters>
        <label>Scheduled - Awaiting Completion</label>
    </listViews>
    <listViews>
        <fullName>Scheduling_In_Progress</fullName>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Account_Number__c</columns>
        <columns>RECORDTYPE</columns>
        <columns>Training_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Confirmed_Training_Start__c</columns>
        <columns>Confirmed_Training_End__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>No Dates,Completed,Canceled</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>notEqual</operation>
            <value>Training__c.Desking_3_0_UTS</value>
        </filters>
        <filters>
            <field>Account__c</field>
            <operation>notContain</operation>
            <value>test dealer,vinsolutions</value>
        </filters>
        <label>Scheduling In Progress</label>
    </listViews>
    <nameField>
        <label>Training Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trainings</pluralLabel>
    <recordTypes>
        <fullName>Desking_3_0_UTS</fullName>
        <active>true</active>
        <description>Used only for trainings where we are ensuring our dealers are up-to-speed on Desking 3.0.</description>
        <label>Desking 3.0 UTS</label>
    </recordTypes>
    <recordTypes>
        <fullName>Inhouse</fullName>
        <active>true</active>
        <description>For trainings that are performed here inhouse. The dealer comes to us.</description>
        <label>Inhouse</label>
    </recordTypes>
    <recordTypes>
        <fullName>Parent_Shell</fullName>
        <active>true</active>
        <description>Only used as a parent of a collection of ongoing trainings.</description>
        <label>Parent Shell</label>
    </recordTypes>
    <recordTypes>
        <fullName>Travel</fullName>
        <active>true</active>
        <description>The standard Training type. Encompasses all single trainings that involve travel on our part.</description>
        <label>Travel</label>
    </recordTypes>
    <recordTypes>
        <fullName>Virtual_Training</fullName>
        <active>true</active>
        <description>On-LineTraining type. Encompasses all single trainings in virtual classroom setting.</description>
        <label>Virtual Training</label>
    </recordTypes>
    <recordTypes>
        <fullName>Workshop</fullName>
        <active>true</active>
        <label>Workshop</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Need_Trainer_to_Complete_Confirm</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Desking_3_0_UTS&quot; &amp;&amp; 
ISCHANGED(Status__c) &amp;&amp; 
ISBLANK(Assigned_Trainer__c) &amp;&amp; 
OR( 
   ISPICKVAL(Status__c, &quot;Completed&quot;), 
   ISPICKVAL(Status__c, &quot;Confirmed Dates&quot;)
) &amp;&amp; 
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorDisplayField>Assigned_Trainer__c</errorDisplayField>
        <errorMessage>A Trainer must be assigned before you can confirm or complete a Training.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Need_Training_Contact_for_Desking</fullName>
        <active>true</active>
        <errorConditionFormula>RecordType.DeveloperName = &quot;Desking_3_0_UTS&quot; &amp;&amp;
ISCHANGED(Status__c) &amp;&amp;
ISBLANK(Training_Contact__c) &amp;&amp;
OR(
   ISPICKVAL(Status__c, &quot;Completed&quot;),
   ISPICKVAL(Status__c, &quot;Confirmed Dates&quot;),
   ISPICKVAL(Status__c, &quot;Not Needed&quot;)
) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorDisplayField>Training_Contact__c</errorDisplayField>
        <errorMessage>A Training Contact is needed before you can change the status on this Training.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Travel_Expenses_Paid_by_Dealer</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Training_Expenses_Paid_by_Dealer__c)) &amp;&amp;
Training_Dates_Confirmed__c = TRUE &amp;&amp;
ISCHANGED(Training_Dates_Confirmed__c) &amp;&amp;
RecordType.DeveloperName != &quot;Desking_3_0_UTS&quot;</errorConditionFormula>
        <errorDisplayField>Training_Expenses_Paid_by_Dealer__c</errorDisplayField>
        <errorMessage>Please confirm if the Travel Expenses will be paid by the dealer or not before proceeding.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Creation_of_Trainings</fullName>
        <active>true</active>
        <errorConditionFormula>ISNEW() &amp;&amp;
Generated_by_Flow__c = FALSE &amp;&amp;
!OR( 
   $User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/ 
   $User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/ 
   $User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/ 
   $User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/ 
   $User.UserRoleId = &quot;00E70000001HAge&quot;, /*Vin Corporate Trainer*/ 
   $User.Alias = &quot;cmeek&quot; /*Cindy Meeks*/ 
   ) &amp;&amp;
$Setup.Master_Switches__c.Validation_Rules__c = TRUE</errorConditionFormula>
        <errorMessage>You do not have the ability to create Trainings from scratch.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Trainer_Fields</fullName>
        <active>true</active>
        <errorConditionFormula>(
ISCHANGED(Group_Lead_Trainer__c) ||
ISCHANGED(Mentee_1__c) ||
ISCHANGED(Mentee_2__c) ||
ISCHANGED(Assigned_Trainer__c) ||
ISCHANGED(Trainer_2__c) ||
ISCHANGED(Trainer_3__c)
) &amp;&amp;
NOT ( OR( 
$User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/ 
$User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/ 
$User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/ 
$User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/ 
$User.UserRoleId = &quot;00E70000001CFeO&quot;, /*Director of Training*/ 
$UserRole.DeveloperName = &quot;TrainingCoordinator&quot;, /*Vin Training Coordinator*/
$UserRole.DeveloperName = &quot;VinPro&quot;, /*Vin Performance Manager*/
$User.Alias = &quot;kjone&quot;, /*Katie Jones*/
$User.Alias = &quot;leah&quot;, /*Leah Risener*/
$User.Alias = &quot;sclar&quot;, /*Shelli Clark*/
$User.Alias = &quot;bbrow&quot; /*Brittney Brownell*/
))</errorConditionFormula>
        <errorMessage>You do not have the capability to change the trainers on this Training.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Training_Type</fullName>
        <active>false</active>
        <errorConditionFormula>ISCHANGED(Training_Type__c) &amp;&amp; 
NOT ( OR( 
$User.UserRoleId = &quot;00E70000001GBsB&quot;, /*Senior Business Analyst*/ 
$User.UserRoleId = &quot;00E70000001GJu5&quot;, /*CRM Systems Administrator*/ 
$User.UserRoleId = &quot;00E70000001GFEU&quot;, /*Customer Service Representative*/ 
$User.UserRoleId = &quot;00E70000001GE8B&quot;, /*Salesforce Developer*/ 
$User.UserRoleId = &quot;00E70000001CFeO&quot;, /*Director of Training*/ 
$User.Id = &quot;00570000001g7fo&quot; /*Greg Becker*/ 
))</errorConditionFormula>
        <errorDisplayField>Training_Type__c</errorDisplayField>
        <errorMessage>You do not have permission to change the Training Type. Please see the Director of Training for assistance.</errorMessage>
    </validationRules>
</CustomObject>